--- a/styles.css
+++ b/styles.css
@@ -82,6 +82,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #header h1 {
     color: var(--primary-font-color);
+    text-shadow: 2px 2px gray;
 }
 
 #addSection {
@@ -100,6 +101,8 @@ h1, h2, h3, h4, h5, h6 {
     color: var(--primary-font-color);
     font-weight: 600;
     cursor: pointer;
+    height: 50%;
+    box-shadow: 2px 2px gray;
 }
 
 #content {
@@ -115,6 +118,7 @@ h1, h2, h3, h4, h5, h6 {
 .card {
     border-radius: 15px ;
     background-color: #C5D89D;
+    box-shadow: 2px 2px gray;
 }
 
 .cardContent {
@@ -141,8 +145,11 @@ h1, h2, h3, h4, h5, h6 {
 .buttonContainer button {
     width: 50%;
     border-radius: 8px;
+    box-shadow: 2px 2px gray;
     border: none;
     cursor: pointer;
+    text-shadow: 0px 1px gray;
+    color: blanchedalmond;
 }
 
 .deleteButton {
@@ -156,4 +163,9 @@ h1, h2, h3, h4, h5, h6 {
 .title {
     justify-content: center;
     border-bottom: 2px solid var(--primary-font-color);
+    text-shadow: 2px 2px gray;
+}
+
+.textContent {
+    text-shadow: 1px 1px gray;
 }
